--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,46 @@
+##########################################################
+## CMake Setting for SoftRenderer 
+##########################################################
+
 cmake_minimum_required(VERSION 3.1)
 
-set(CMAKE_CXX_STANDARD 14)		
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(CMakeDependentOption)
 set(MAIN_PROJECT_NAME SoftRenderer)
 
+option(BUILD_RUNTIME "Build Runtime library" OFF)
 option(BUILD_PLAYER "Build Player executable" OFF)
 
 if (NOT BUILD_PLAYER)
     message(FATAL_ERROR "no BUILD_PLAYER OPTION")
+else()
+	message(STATUS "BUILD_PLAYER option detected!")
+endif ()
+
+if (BUILD_RUNTIME)
+	message(STATUS "BUILD_RUNTIME option detected!")
 endif ()
 
 project(${MAIN_PROJECT_NAME})
 
-if(NOT WIN32)
+set(RUNTIME_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Source/Runtime)
+set(PLATFORM_WINDOWS TRUE)
+
+message(STATUS "Running from ${CMAKE_CURRENT_SOURCE_DIR}")
+message(STATUS "Version: ${CMAKE_VERSION}")
+message(STATUS "Generator: ${CMAKE_GENERATOR}")
+message(STATUS "System: ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_VERSION} ${CMAKE_SYSTEM_PROCESSOR}") 
+message(STATUS "C Compiler: ${CMAKE_C_COMPILER}")
+message(STATUS "CXX Compiler: ${CMAKE_CXX_COMPILER}")
+set(CMAKE_CONFIGURATION_TYPES Debug Release)
+
+# DEBUG, _DEBUG definition to compiler in debug build
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
+
+if(!WIN32)
 	message(FATAL_ERROR "This project requires windows environment")
 endif()
 
@@ -58,9 +84,16 @@ endforeach()
 # Sub projects
 ################################################################################
 
+if (BUILD_RUNTIME)
+    add_subdirectory(Source/Runtime/Math)
+    add_subdirectory(Source/Runtime/Renderer)
+    add_subdirectory(Source/Runtime/Engine)
+endif ()
+
 if (BUILD_PLAYER)
     add_subdirectory(Source/Player)
 endif ()
 
 set(CMAKE_SUPPRESS_REGENERATION true)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT SoftRendererPlayer)
+
